samples/_failures_safe/1761073079_354a5b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a647741c.c: In function ‘main’:
./samples/SAFE/__tmp_a647741c.c:146:5: error: expected declaration or statement at end of input
  146 |     }
      |     ^
